Inserting logo and avatar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
         "./src/storage/*"
       ],
       "@themes/*": [
-        "./src/themes/*"
+        "src/theme/*"
       ],
       "@utils/*": [
         "./src/utils/*"
