--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
