--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/nunito": "^0.2.3",
+    "@expo-google-fonts/nunito-sans": "^0.2.3",
     "expo": "~48.0.11",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-safe-area-context": "4.5.0",
     "styled-components": "^5.3.9",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
